src/sass/static/pages.scss
/* ... */
body #not_authenticated_financial ul.checked > li {
    list-style: none;
}

.liquidity-solutions-content {
    .box {
        border: 1px solid $COLOR_GRAY_SHADE;
        min-height: 256px;

        img {
            height: 48px;
        }
    }
    .white-bg {
        background-color: $COLOR_WHITE;
    }
}

.about-us-content {
    .about-us .values-box {
        display: flex;
        align-items: flex-start;
        margin: 8px;

        .icon-wrapper {
            margin-right: 1.5rem;

            &.ic-intergrity:before {
                content: url('../images/pages/careers/ic-intergrity.svg');
                width: 60px;
                height: 60px;
            }
            &.ic-competence:before {
                content: url('../images/pages/careers/ic-competence.svg');
                width: 60px;
                height: 60px;
            }
            &.ic-customer-focus:before {
                content: url('../images/pages/careers/ic-customer-focus.svg');
                width: 60px;
                height: 60px;
            }
            &.ic-teamwork:before {
                content: url('../images/pages/careers/ic-teamwork.svg');
                width: 60px;
                height: 60px;
            }
        }
        &-subheader {
            font-size: $FONT_SIZE_L;
            font-weight: normal;
            text-transform: capitalize;
        }
        .header-line {
            border: 2px solid $COLOR_ORANGE;
            width: 50px;
        }
    }
    .fill-text {
        padding: 1em 0;
    }
    .center-element {
        margin: 0 auto;
    }
    .btn-margin-top {
        margin-top: 1.5em;
    }
    .mac {
        width: 100%;
    }
}

.accounts-content {
    .table-container {
        overflow-x: visible;
    }
    .table-container table {
        border: 1px solid $COLOR_LIGHT_GRAY;

        th {
            background-color: $COLOR_WHITE;
        }
        th, td {
            text-align: center;
            padding: 20px;
            border-bottom: 1px solid $COLOR_LIGHT_GRAY;
        }
        &.responsive {
            &#new_accounts_table {
                th, td {
                    @media screen and (max-width: 500px) {
                        text-align: left !important;

                        &:last-child {
                            padding-top: 0;
                        }
                    }
                }
            }
            &#existing_accounts {
                @media screen and (max-width: 500px) {
                    display: block;
                    width: 100%;
                }

                tbody {
                    @media screen and (max-width: 500px) {
                        display: block;
                    }
                }
                tr {
                    @media screen and (max-width: 500px) {
                        display: block;
                        margin: 10px !important;
                        border-bottom: 1px solid $COLOR_LIGHT_GRAY;

                        &:last-child {
                            border: none;
                        }
                    }
                }
                th, td {
                    text-align: center !important;
                    border: none;

                    @media screen and (max-width: 500px) {
                        display: inline-block;
                        padding: 10px;
                        width: 40%;
                        width: calc(50% - 20px);
                        text-align: left !important;

                        &:nth-child(2n) {
                            float: right;
                        }
                    }
                }
            }
        }
    }
    #note .hint {
        margin-bottom: 3px;
    }
    #accounts_wrapper #no_new_accounts_wrapper {
        color: $COLOR_GRAY_SHADE;
    }
}

#set_currency {
    #frm_set_currency {
        .section-divider {
            max-width: 500px;
        }
    }
    .currency_list > div {
        padding: 15px;
        background-image: url('../images/pages/set_currency/tick-normal.svg');
        background-repeat: no-repeat;
        background-position: center bottom;
        line-height: 30px;

        &:hover {
            cursor: pointer;
        }
        &.selected {
            background-image: url('../images/pages/set_currency/tick-selected.svg');
        }
        .currency-name {
            line-height: 22px;
            padding: 4px 0;
        }
    }
    .list-style-inside {
        list-style-position: inside;
    }
}

.lightbox #set_currency {
    padding: 25px;
    width: 40em;

    #set_currency_text {
        margin-top: 0;
    }
    #fiat_currencies, #crypto_currencies {
        + div {
            max-width: 30em;
        }
    }
}

.platforms-content {
    h2 {
        line-height: 36px;
    }
    .beta {
        position: relative;
        top: -15px;
        left: 5px;
        background-color: rgb(42, 48, 82);
        border-radius: 10px;
        color: $COLOR_WHITE;
        display: inline-block;
        font-size: 10px;
        font-weight: 400;
        height: 16px;
        line-height: 1.8;
        text-align: center;
        width: 34px;
    }
    .new:after {
        content: url('../images/pages/platforms/new_badge.svg');
        position: relative;
        top: -15px;
        left: 5px;
    }
    #new_badge {
        position: relative;
        top: -15px;
    }
    .download-app {
        display: inline-block;
        margin-right: 30px;
    }
    img.platform {
        max-height: 150px;
        width: auto;
        max-width: 100%;
        vertical-align: middle;
    }
    .b-m-md li {
        margin-bottom: 20px;
    }
    .divider-sm {
        width: 10px;
        display: inline-block;
    }
    @media screen and (max-width: 768px) {
        .no-center-text-p-m {
            text-align: inherit;
            padding-bottom: 30px;
        }
        .mobile-hide {
            display: none;
        }
    }
}
/* ... */

